pri_sub_asso.tf
# resource "aws_route_table_association" "sub2_asso" {
#   subnet_id      = aws_subnet.subnet2.id
#   route_table_id = aws_route_table.pri_rt.id
# }
